exports[`attest has correct payload in JWT for an attestation 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "claim": Object {
      "email": "bingbangbung@email.com",
    },
    "exp": 1485321134996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "sub": "0x112233",
  },
  "signature": "-mEzVMPYnzqFhOr0O7fs71-dWAacnllVyOdWQY0zh2ZdIt7-30IYTewds4tGlkLmMky-Y1ZjRmIsxmM7xvAgxg",
}
`;

exports[`createRequest has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "BvclScIROeRimK_81fZp3yGVkhM0BF2cJOWp5yvpqz0z5kr4dPucDkdZsltUGhAXEaeuwxOE4c3vJYyeIHOmxg",
}
`;

exports[`createRequest has correct payload in JWT for a request 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "aL2fTdDTIB_fcp0tTOlAFj9J0zFr2GRrgxxrP60bdguEpfC5LJJHufUpu2fXq_q42PrX_KHHm5-C2RZEWQnP0g",
}
`;

exports[`createRequest has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "signature": "pvi7cEu3wg7VQ-FvdHG_DYrvJy6JH5pK_61E7tCITtsnLk-mkwWGB1y7GmJ89e1F3-SXT7dcVNvR9fwbS0i0FA",
}
`;

exports[`createRequest has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "9SIKcKERFJ9l6LgHVQ7AX058MDJahYmB29hjZ6gmToDS2nvClF6QjgUCmQnRHynIYmSn0ePcKjD1MQ9BVy1Ucg",
}
`;

exports[`createRequest has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "callback": "https://myserver.com",
    "exp": 1485321733996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "jbd6jKCc4X8zO3ybWQGhX8pCb72Ml1-H5XH8pJGZfBscIYHX8pkbf2GW2na--uQe18OKwYu2HGU9VEGPjWsMnw",
}
`;

exports[`createRequest has correct payload in JWT requesting a specific network_id 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "net": "0x4",
    "type": "shareReq",
  },
  "signature": "ZTi2D7bjK3QZP9aEYkmoOJfX_rDsqO8T024Hcrj9vo7MUss3Un4J12KJqpWdifXc5PXjjRc8cFT-G4jUTyenlQ",
}
`;

exports[`createRequest ignores unsupported request parameters 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "exp": 1485321733996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "BvclScIROeRimK_81fZp3yGVkhM0BF2cJOWp5yvpqz0z5kr4dPucDkdZsltUGhAXEaeuwxOE4c3vJYyeIHOmxg",
}
`;

exports[`receive returns profile mixing public and private claims 1`] = `
Object {
  "address": "0x001122",
  "name": "Davie",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile mixing public and private claims 2`] = `
Object {
  "address": "0x001122",
  "name": "Davie",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "address": "0x001122",
  "name": "Davie",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134996,
      "iat": 1485321133996,
      "iss": "0x001122",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJzdWIiOiIweDExMjIzMyIsImNsYWltIjp7ImVtYWlsIjoiYmluZ2JhbmdidW5nQGVtYWlsLmNvbSJ9LCJleHAiOjE0ODUzMjExMzQ5OTYsImlzcyI6IjB4MDAxMTIyIiwiaWF0IjoxNDg1MzIxMTMzOTk2fQ.-mEzVMPYnzqFhOr0O7fs71-dWAacnllVyOdWQY0zh2ZdIt7-30IYTewds4tGlkLmMky-Y1ZjRmIsxmM7xvAgxg",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`receive returns profile mixing public and private claims and verified credentials 2`] = `
Object {
  "address": "0x001122",
  "name": "Davie",
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134996,
      "iat": 1485321133996,
      "iss": "0x001122",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJzdWIiOiIweDExMjIzMyIsImNsYWltIjp7ImVtYWlsIjoiYmluZ2JhbmdidW5nQGVtYWlsLmNvbSJ9LCJleHAiOjE0ODUzMjExMzQ5OTYsImlzcyI6IjB4MDAxMTIyIiwiaWF0IjoxNDg1MzIxMTMzOTk2fQ.-mEzVMPYnzqFhOr0O7fs71-dWAacnllVyOdWQY0zh2ZdIt7-30IYTewds4tGlkLmMky-Y1ZjRmIsxmM7xvAgxg",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`receive returns profile with only public claims 1`] = `
Object {
  "address": "0x001122",
  "name": "David Chaum",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile with only public claims 2`] = `
Object {
  "address": "0x001122",
  "name": "David Chaum",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile with private chain network id claims 1`] = `
Object {
  "address": "0x001122",
  "name": "David Chaum",
  "networkAddress": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile with private chain network id claims 2`] = `
Object {
  "address": "0x001122",
  "name": "David Chaum",
  "networkAddress": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;
